# collins-dict

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-alpine.sh  build.yml  cmake.yml  musl.sh
registry/ports/lexbor/: lexbor-config.cmake  portfile.cmake  vcpkg.json
registry/versions/: baseline.json
registry/versions/l-/: lexbor.json
src/: main.cpp
triplets/: x64-mingw-mixed.cmake  x64-mingw.cmake
